--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button type="submit" class="btn" id="login-button">Login</button>
     </form>
     
-    <p id="välkommen-meddelande">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+    <p id="välkommen-meddelande"></p>
 
     <button id="logga-ut" style="display: none;">Logout</button>
 
